# QML

./: .gitignore  CMakeLists.txt  InteractiveRectangle.qml  Main.qml  main.cpp
.github/workflows/: ci.yml
tests/: CMakeLists.txt  tst_interactiverectangle.qml
